// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal return Modal on position bottom 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      id="test"
    />
  </div>
</div>
`;

exports[`components/modal return Modal on position bottom-right 1`] = `
<div>
  <div
    class="Modal bottom-right"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      id="test"
    />
  </div>
</div>
`;

exports[`components/modal return Modal on position top 1`] = `
<div>
  <div
    class="Modal top"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      id="test"
    />
  </div>
</div>
`;

exports[`components/modal should match snapshot 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      id="test"
    />
  </div>
</div>
`;
